src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

body {
    margin: 0;
    padding: 0;
}

*[data-active=true] {
    background: blue;
    color: white;
}

.popup-container {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100vh;
    overflow: hidden;
    background: #000000AA;
    display: flex;
    justify-content: center;
    align-items: center;
}

.popup-container > div {
    background: white;
    min-width: 500px;
    border-radius: 5px;
}

input.custom-input {
    border: 1px solid lightgray;
    padding: 8px;
    transition: all .2s ease;
    
    &.submit-side:not([type=submit]) {
        border-radius: 6px 0px 0px 6px;
    }
    &.submit-side[type=submit] {
        border-left: 0px;
        border-radius: 0px 6px 6px 0px;
        background-color: blue;
        color: white;
        cursor: pointer;
    }
    &:disabled {
        filter: grayscale(100%) opacity(30%);
    }
}

